cabal-version:      3.4
name:               clickhouse-haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Sander Melnikov
maintainer:         hey@sandydoo.me
copyright:          2023 Sander Melnikov
category:           Database
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

    default-extensions: OverloadedStrings,
                        RecordWildCards,
                        OverloadedRecordDot,
                        StrictData,
                        NoFieldSelectors,
                        DerivingStrategies

library
    import:           warnings
    exposed-modules:  Database.ClickHouse.HTTP

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    aeson,
                      base ^>=4.16.4.0,
                      bytestring,
                      extra,
                      http-client,
                      http-client-tls,
                      text,
                      uri-encode

    hs-source-dirs:   src
    default-language: GHC2021

test-suite clickhouse-haskell-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: GHC2021

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        aeson,
        base ^>=4.16.4.0,
        clickhouse-haskell,
        hspec
